force-app/main/default/objects/ICR_Config__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Admin_Email__c</fullName>
        <label>Admin Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_No_Running__c</fullName>
        <label>Document No Running</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_No_Year__c</fullName>
        <label>Document No Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expire_Committee_Reminder__c</fullName>
        <label>Expire Committee Reminder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ICR Config</label>
</CustomObject>